Fixing bug 180552. Make document.body.client* work even if the body element's overflow is set to hidden. r=caillon@returnzero.com, sr=peterv@netscape.com